--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "routes": [
     { "src": "/api/chat", "dest": "/api/chat.js" },
-    { "src": "/public/(.*)", "dest": "/public/$1" }
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
